other-vpol/require-image-checksum/.kyverno-test/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whole-image-exempt
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx
