other-vpol/require-image-checksum/.kyverno-test/mixed-image-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mixed-image-pod
  namespace: default
spec:
  containers:
    - name: approved
      image: nginx
    - name: unapproved
      image: busybox:1.36
